# ACPP

./: LICENSE  MinimizationFunction.py  Periodic Fitting Function  README.md  SineSignalFunction.py  pyproject.toml
ACPP/: __init__.py
ACPP/BasicML/: DBScanPlotting.py  KMeansPlotting.py  PeriodicSignal.py  __init__.py  minimization.py
ACPP/BestFitFunctions/: PFF.py  __init__.py
ACPP/BraggDiskDetectionTutorials/: ClusteringOnBraggPeaks.ipynb  __init__.py
ACPP/ClusteringAnalysis/: DDF.py  __init__.py
ACPP/ClusteringProject/: BraggDiskDetectionTutorial.ipynb  BraggPeaksCentering_Part2.ipynb  BraggPeaksClustering_Part3.ipynb  BraggPeaks_Part1.ipynb  ClusterCOM.py  DBScanClustering.py  DigitalDarkFieldFunction.py  DigitalDarkFieldImage  KMeansClustering.py  KMeansReconstructed.py  ReconstructedCluster.ipynb  ReconstructedCluster.py  ReconstructingCluster.py  __init__.py
ACPP/Notebooks/: ClusteringOnBraggPeaks.ipynb  README.md
ACPP/funcs/: Subtraction.py
BasicML/: DBScanPlotting.py  KMeansPlotting.py  MinimizationFunction.py  PeriodicSignal.py  __init__.py
BestFitFunctions/: PFF.py  PeriodicSineFitting.py  PolynomialFittingFunction.py  SinePFF.py  __init__.py
Notebooks/: 1 - Bragg Disk Detection.ipynb  2 - Bragg Peaks and Centering.ipynb  3 - DBSCAN Clustering (1).ipynb  3 - DBSCAN Clustering.ipynb  4 - Crystal Identification.ipynb  BraggDiskDetectionTutorial.ipynb  BraggDisksToBraggPeaks.ipynb  BraggPeakClustering_And_IndividualCrystalsDetection.ipynb  BraggPeakClustering_And_IndividualCrystalsDetection_update1.ipynb  BraggPeaksClustering_Part3 (4).ipynb  BraggPeaksClustering_Part3 (5).ipynb  README.md
ProjectWork/: __init__.py
ProjectWork/BasicML/: DBScanPlotting.py  KMeansPlotting.py  MinimizationFunction.py  __init__.py
ProjectWork/BestFitFunctions/: sine_fitting.py
ProjectWork/ClusteringAnalysis/: COM.py  DDF.py  __init__.py
ProjectWork/PeriodicAndFitFuncs/: __init__.py  fit_resdiuals_plot.py  periodic_fitting.py
ProjectWork/funcs/: __init__.py  addition.py  division.py  multiplication.py  pythagoras.py  subtraction.py
funcs/: Addition.py  Division.py  Multiplication.py  Pythagoras.py  Subtraction.py  __init__.py  maths.py
