[project]
name = "ACPP"
version = "0.0.1"
authors = [
  { name="Alicja Hertmanowska", email="2779765h@student.gla.ac.uk" },
]

description = "Application of DBSCAN Clustering to 4D-STEM Data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "py4dstem == 0.14.18",
    "numpy == 1.26.4",
    "scipy == 1.17.0",
    "matplotlib >= 3.10.8",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools >= 77.0.3"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "ProjectWork"}

[tool.setuptools.packages.find]
where = ["ProjectWork"]

[project.urls]
Homepage = "https://github.com/2779765h/ACPP.git"


